# FastAPI_Temp

./: .env  .gitignore  project.py  pyproject.toml
migrations/: env.py
migrations/versions/: 072ad31f0f92_3st_migrations.py  35b2be437710_1st_migrations.py  973802b8e547_2st_migrations.py
src/: main.py
src/core/: config.py  hashing.py  security.py
src/database/: db_engine.py  model.py
src/error/: user.py
src/mails/: generate.py
src/mails/src/: new_account.mjml  reset_password.mjml  test_email.mjml
src/routes/: __init__.py  admin.py  auth.py
src/schemas/: auth.py  shared.py  users.py
src/services/: auth.py  user.py
src/shared/: dependencies.py
src/utils/: auth.py
